вывод списка файлов документации Device создание методов скачтвания файлов в браузере

--- a/.gitignore
+++ b/.gitignore
@@ -378,3 +378,4 @@ commit_message.txt
 /trajectories/trajectory_20250819_085027.json
 /trajectories
 /displayDevice.txt
+/BlazorTool/wwwroot/identityData.json
