bypass Auth for DEBUG скачивание файлов device

--- a/BlazorTool/BlazorTool.csproj
+++ b/BlazorTool/BlazorTool.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Content Remove="appsettings.json" />
+    <Content Remove="wwwroot\identityData.json" />
   </ItemGroup>
 
   <ItemGroup>
