--- a/BlazorTool/Properties/launchSettings.json
+++ b/BlazorTool/Properties/launchSettings.json
@@ -37,6 +37,9 @@
         "ASPNETCORE_URLS": "https://localhost:7282;http://localhost:5168"
       },
       "distributionName": "Ubuntu"
+    },
+    "Profile 1": {
+      "commandName": "Project"
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
