--- a/.gitignore
+++ b/.gitignore
@@ -379,3 +379,5 @@ commit_message.txt
 /trajectories
 /displayDevice.txt
 /BlazorTool/wwwroot/identityData.json
+/DoneToday.txt
+/temp_CheckSmbCredentialsAsync.txt
