fix bugs - saving Settings WorkDayStart and Change: WorkOrder not editable on ActivitiesPage intro: TelerikEditor  with toolbar for new Activity

--- a/.gitignore
+++ b/.gitignore
@@ -391,3 +391,7 @@ gha-creds-*.json
 /Output-Debug.txt
 /FlexiCMMS.html
 /Qwen_html_20250912_9p3w086ty.html
+/Install_En.html
+/Install_En.pdf
+/Install_Pl.html
+/Install_Pl.pdf
