--- a/.github/workflows/build-blazor-publish-artifact.yml
+++ b/.github/workflows/build-blazor-publish-artifact.yml
@@ -17,7 +17,16 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '8.0.x'
-
+        
+# 👇 private NuGet-source Telerik from secrets
+    - name: 🔐 Add Telerik NuGet Feed
+      run: |
+        dotnet nuget add source "${{ secrets.TELERIK_NUGET_URL }}" \
+          --name telerik \
+          --username "api-key-placeholder" \
+          --password "${{ secrets.TELERIK_API_KEY }}" \
+          --store-password-in-clear-text
+          
     - name: 📦 Restore solution
       run: dotnet restore
 
