--- a/.github/workflows/build-blazor-publish-artifact.yml
+++ b/.github/workflows/build-blazor-publish-artifact.yml
@@ -21,7 +21,9 @@ jobs:
 # 👇 private NuGet-source Telerik from secrets
     - name: 🔐 Add Telerik NuGet Feed
       run: |
-        echo "Adding Telerik NuGet source..."
+        echo "=== DEBUG: Telerik API Key length ==="
+        echo "${{ secrets.TELERIK_API_KEY }}" | wc -c
+        echo "=== Adding NuGet source ==="
         dotnet nuget add source "https://nuget.telerik.com/v3/index.json" \
           --name "telerik" \
           --username "api-key-placeholder" \
