--- a/.github/workflows/build-blazor-publish-artifact.yml
+++ b/.github/workflows/build-blazor-publish-artifact.yml
@@ -10,8 +10,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: 🔁 Checkout code
+    - name: 🔁 Checkout code (full depth for Nerdbank.GitVersioning)
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: ⚙️ Setup .NET 8
       uses: actions/setup-dotnet@v4
