--- a/.github/workflows/build-blazor-publish-artifact.yml
+++ b/.github/workflows/build-blazor-publish-artifact.yml
@@ -18,7 +18,7 @@ jobs:
     - name: ⚙️ Setup .NET 8
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '8.0.10'
+        dotnet-version: '8.0.x'
         
 # 👇 private NuGet-source Telerik from secrets
     - name: 🔐 Add Telerik NuGet Feed
@@ -41,7 +41,6 @@ jobs:
       run: |
         dotnet publish ./BlazorTool.Client/BlazorTool.Client.csproj \
           --configuration Release \
-          --runtime linux-x64 \
           --self-contained false \
           --output ./ClientPublish
 
