disable Delete button for Appointment & add weather widget
- Introduced `ShowAssignedColumnFilter` parameter in `OrdersGrid.razor` to control the visibility of the assigned person filter.
- Updated `MainLayout.razor` to include a weather widget, improving user interface functionality.
- Improved error handling in `ApiServiceClient.cs` for better API response processing.
- Added `WeatherWidget.razor` component to fetch and display weather information based on user location.
-fix warnings

--- a/BlazorTool/BlazorTool.csproj
+++ b/BlazorTool/BlazorTool.csproj
@@ -33,6 +33,9 @@
     <Content Update="wwwroot\app.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Update="wwwroot\weather.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Target Name="CopyChangelogToWwwRoot" BeforeTargets="Build">
     <ItemGroup>
