--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -20,7 +20,10 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '8.0.x'
-
+    
+    - name: 🧩 Install WebAssembly Workload
+      run: dotnet workload install wasm-tools
+      
     # 👇 private NuGet-source Telerik from secrets
     - name: 🔐 Add Telerik NuGet Feed
       run: |
