Enhance weather handling and introduce timer component
- Updated `BlazorTool.Client.csproj` to ensure `utility.js` is always copied to the output directory.
- Added null checks in `OrdersGrid.razor` to prevent null reference exceptions.
- Introduced a reusable timer component in `Timer.razor` for better interval management and state handling.
- Improved weather data handling in `WeatherWidget.razor`, enhancing error handling and user feedback.
- Implemented a timer in `OrdersPage.razor` for automatic data refresh and added a notification system for new orders.
- Added `WeatherController.cs` to manage API requests for weather data with caching to optimize performance.
- Updated localization files to support new strings for "New Orders" in English and Polish.

--- a/BlazorTool.Client/BlazorTool.Client.csproj
+++ b/BlazorTool.Client/BlazorTool.Client.csproj
@@ -42,7 +42,7 @@
 
   <ItemGroup>
     <Content Update="wwwroot\js\utility.js">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
