Refactor activity and Dispose Refresh-Data-Timer
- Enhanced `AddActivityForm.razor` to ensure workload calculations do not exceed 24 hours.
- Implemented navigation event handling in `Home.razor` and `SchedulerPage.razor` to manage subscriptions and timer disposal.

--- a/BlazorTool.Client/BlazorTool.Client.csproj
+++ b/BlazorTool.Client/BlazorTool.Client.csproj
@@ -13,6 +13,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Pages\OrdersPage.razor.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Pages\OrdersPage.razor.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
         <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
         <PackageReference Include="Markdig" Version="0.41.3" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
